--- a/LOTRFaceRecognition/Base.lproj/Main.storyboard
+++ b/LOTRFaceRecognition/Base.lproj/Main.storyboard
@@ -77,7 +77,61 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="135.19999999999999" y="148.87556221889056"/>
+            <point key="canvasLocation" x="63" y="151"/>
+        </scene>
+        <!--ImageViewController-->
+        <scene sceneID="RzQ-Dr-1Oh">
+            <objects>
+                <viewController storyboardIdentifier="ImageViewController" title="ImageViewController" id="lQQ-cz-dIx" customClass="ImageViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VWU-ma-M2e"/>
+                        <viewControllerLayoutGuide type="bottom" id="SPL-WY-6hb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OLq-HT-qh0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="grt-E7-HKv"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u95-8I-Eb7">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="OeC-lQ-f09"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GgT-Sy-Dfc">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="cPn-k1-Zhg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="3e4-ZL-NG9"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GgT-Sy-Dfc" firstAttribute="leading" secondItem="u95-8I-Eb7" secondAttribute="leading" id="4yc-RC-9Am"/>
+                            <constraint firstAttribute="trailing" secondItem="grt-E7-HKv" secondAttribute="trailing" id="Gtp-0D-IMs"/>
+                            <constraint firstItem="grt-E7-HKv" firstAttribute="leading" secondItem="OLq-HT-qh0" secondAttribute="leading" id="IVY-Jq-HO5"/>
+                            <constraint firstItem="u95-8I-Eb7" firstAttribute="top" secondItem="grt-E7-HKv" secondAttribute="bottom" constant="8" symbolic="YES" id="J4J-sT-GVS"/>
+                            <constraint firstItem="grt-E7-HKv" firstAttribute="centerX" secondItem="u95-8I-Eb7" secondAttribute="centerX" id="Lib-8U-njF"/>
+                            <constraint firstItem="GgT-Sy-Dfc" firstAttribute="top" secondItem="VWU-ma-M2e" secondAttribute="bottom" id="NKp-6r-Sfw"/>
+                            <constraint firstItem="GgT-Sy-Dfc" firstAttribute="leading" secondItem="OLq-HT-qh0" secondAttribute="leadingMargin" id="STj-4E-1nm"/>
+                            <constraint firstItem="grt-E7-HKv" firstAttribute="top" secondItem="GgT-Sy-Dfc" secondAttribute="bottom" constant="3" id="eUD-Tb-NRC"/>
+                            <constraint firstItem="SPL-WY-6hb" firstAttribute="top" secondItem="u95-8I-Eb7" secondAttribute="bottom" constant="8" symbolic="YES" id="ySX-4B-OPO"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="grt-E7-HKv" id="cWf-I3-fCw"/>
+                        <outlet property="label" destination="u95-8I-Eb7" id="D9U-sJ-k7K"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gUT-xh-Qif" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1120.8" y="170.46476761619192"/>
         </scene>
     </scenes>
 </document>
